--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,27 @@
 languageCode = 'ar'
 title = 'الكتيب'
 theme = 'etch'
+
+[params]
+  description = "Your site description"
+  copyright = "Copyright © 2021 Your Name"
+  dark = "auto"
+  highlight = true
+
+[menu]
+  [[menu.main]]
+    identifier = "posts"
+    name = "posts"
+    title = "posts"
+    url = "/"
+    weight = 10
+
+  [[menu.main]]
+    identifier = "about"
+    name = "about"
+    title = "about"
+    url = "/about/"
+    weight = 20
+
+[permalinks]
+  posts = "/:title/"
